--- a/NodeFlow/CMakeLists.txt
+++ b/NodeFlow/CMakeLists.txt
@@ -26,7 +26,7 @@ file (GLOB SourceFiles *.cpp)
 
 add_library(${MODULE} SHARED ${SourceFiles} )
 
-target_link_libraries(${MODULE} ${wxWidgets_LIBRARIES}  ${Boost_LIBRARIES} ${EXTRA_LIB_FLAGS} ${PROJECT_LIB_FLAGS} ${WTLIBS})
+target_link_libraries(${MODULE} ${wxWidgets_LIBRARIES}  ${Boost_LIBRARIES} ${EXTRA_LIB_FLAGS} ${PROJECT_LIB_FLAGS})
 
 install(TARGETS ${MODULE} DESTINATION lib)
 
