Web properties added
MQTT node added as example. Web editor task now runs a flow as a
seperate thread from the command line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ add_subdirectory(NodeFlow)
 add_subdirectory(NodeEditor)
 add_subdirectory(Modules)
 add_subdirectory(NodeFlowWeb)
+add_subdirectory(NodeFlowExec)
+
 #
 
 
